--- a/style-principal.css
+++ b/style-principal.css
@@ -57,22 +57,26 @@ textarea{
     padding: 5em 0;
 }
 
-.flecha{
-    rotate: 270deg;
-    height: 8em;
-    width: 10em;
+#botonDesencriptar{
+    font-weight: bold;
+    background-color: orange;
+    color: white;
+    margin: 2em 0;
+    text-align: center;
+    height: 20%;
+    font-size: 22px;
 }
 
-.botonencriptar{
+#botonencriptar{
     font-weight: bold;
     color: white;
     margin: 2em 0;
-    height: 25%;
+    height: 20%;
     width: 60%;
     font-size: 22px;
 }
 
-.botonencriptar{
+#botonencriptar{
     background-color: rgb(97, 97, 97);
     border: none;
     border-radius: 10px;
@@ -80,7 +84,7 @@ textarea{
     cursor: pointer;
 }
 
-.botonencriptar:hover{
+#botonencriptar:hover{
     transition: 1s all;
     background-color: rgb(31, 30, 30);
     transform: scale(1.08);
